syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.volvo.demo.book";

message Book {
    int32 id = 1;
    string title = 2;
    int32 authorId = 3;
}

service BookService {
    rpc createBook(CreateBookRequest) returns (Book);
    rpc getBook(GetBookRequest) returns (Book);
    rpc listBooks(ListBooksRequest) returns (ListBooksResponse);
}

message CreateBookRequest {
    string title = 2;
    int32 authorId = 3;
}

message GetBookRequest {
    int32 id = 1;
}

message ListBooksRequest {
    repeated int32 ids = 1;
}

message ListBooksResponse {
    repeated Book books = 1;
}